--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-camera-ios": "^0.2.1",
+    "react-camera-pro": "^1.3.0",
     "react-dom": "^18"
   },
   "devDependencies": {
