--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-camera-pro": "^1.3.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-use-camera": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
